--- a/js4devs/package.json
+++ b/js4devs/package.json
@@ -4,10 +4,14 @@
   "description": "git@github.com:sspringer82/jsdays2021.git",
   "main": "index.js",
   "private": true,
+  "author": {
+    "name": "Basti",
+    "email": "sebastian.springer@maibornwolff.de",
+    "twitter": "@basti_springer"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
   "license": "ISC"
 }
