--- a/node/package.json
+++ b/node/package.json
@@ -4,6 +4,7 @@
   "description": "My fancy math trainer",
   "main": "index.js",
   "scripts": {
+    "start": "node index.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
