--- a/node/package.json
+++ b/node/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "chalk": "^4.1.0",
     "commander": "^7.2.0",
+    "node-emoji": "^1.10.0",
     "random": "^3.0.3"
   }
 }
