--- a/node/package.json
+++ b/node/package.json
@@ -4,8 +4,11 @@
   "description": "My fancy math trainer",
   "main": "index.js",
   "scripts": {
-    "start": "node index.mjs",
+    "start": "node src/index.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "bin": {
+    "m2": "bin/index.mjs"
   },
   "keywords": [
     "math",
