--- a/node/package.json
+++ b/node/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.mjs",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watch"
   },
   "bin": {
     "m2": "bin/index.mjs"
@@ -21,5 +21,8 @@
     "commander": "^7.2.0",
     "node-emoji": "^1.10.0",
     "random": "^3.0.3"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3"
   }
 }
