--- a/node/express/package.json
+++ b/node/express/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "helmet": "^4.4.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7"
   }
