--- a/sheepNrun/package.json
+++ b/sheepNrun/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/sspringer82/jsdays-sheepnrun/issues"
   },
-  "homepage": "https://github.com/sspringer82/jsdays-sheepnrun#readme"
+  "homepage": "https://github.com/sspringer82/jsdays-sheepnrun#readme",
+  "dependencies": {
+    "typescript": "^4.2.3"
+  }
 }
