--- a/sheepNrun/package.json
+++ b/sheepNrun/package.json
@@ -4,7 +4,7 @@
   "description": "## Links",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "http-server ."
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/sspringer82/jsdays-sheepnrun#readme",
   "dependencies": {
+    "http-server": "^0.12.3",
     "typescript": "^4.2.3"
   }
 }
